--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
   </head>
   <body>
     <h1>Comparing web publishing platforms</h1>
-
+    <!-- gridstart-->
+    <div class="container">
+        <div class="row">
+            <div class="col">text1</div>
+            <div class="col">text2</div>
+            <div class="col">text3</div>
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
