--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Tiinon_webTech</title>
   </head>
   <body>
@@ -15,9 +15,9 @@
     <!-- gridstart-->
     <div class="container">
         <div class="row">
-            <div class="col col-3">text1</div>
-            <div class="col col-3">text2</div>
-            <div class="col col-6">text3</div>
+            <div class="col col-4">text1</div>
+            <div class="col col-4">text2</div>
+            <div class="col col-4">text3</div>
         </div>
     </div>
 
