--- a/index.html
+++ b/index.html
@@ -11,13 +11,29 @@
     <title>Tiinon_webTech</title>
   </head>
   <body>
-    <h1>Comparing web publishing platforms</h1>
+    <h1>Comparing website publishing services</h1>
     <!-- gridstart-->
     <div class="container">
         <div class="row">
-            <div class="col col-4">text1</div>
-            <div class="col col-4">text2</div>
-            <div class="col col-4">text3</div>
+            <div class="col col-4"><h2>1. Github pages</h2>
+                Github pages is  comparatively easy to use and free of charge (there is a paid account possibility as well though). As usual, there is a lot of comprehensive learning material available on the Github home pages and the web (f.ex. Youtube) also. In the Github feature pages there’s a list of the main features of their service. Here’s some of them:
+                
+                </div>
+            <div class="col col-4">
+                <h2>2. Netlify</h2>
+                I found quite an interesting resource of user experiences of Netlify on
+                Capterra.com. Here’s some of the pros and cons written by the developers:
+                “Netlify: Not a beginner tool”
+                “Deploy from Git with ease”
+                “La gran alternativa al Hosting tradicional”</div>
+            <div class="col col-4"><h2>3. WordPress</h2>
+From the Trustradius -website:
+“Wordpress is an open-source publishing platform popular with bloggers, and a content
+management system, known for its simplicity and modifiability. Websites may host their own
+blogging communities, controlling and moderating content from a single dashboard.”
+Wordpress has a great reputation as a flexible and user friendly web publishing platform.
+Customer base is huge, two out of every five websites on the internet use WordPress
+(Hubspot.com 2022).</div>
         </div>
     </div>
 
