--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Tiinon_webTech</title>
   </head>
   <body>
+    
       <!--navbar start-->
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
@@ -44,8 +45,11 @@
         </div>
       </nav>
     <!--navbar ends-->
-
-    <h1>Comparing website publishing services</h1>
+    <div id="container">
+        <div id="label"><h1>Comparing website publishing services</h1>
+        </div>
+    </div>
+    
     <!-- gridstart-->
     <div class="container">
         <div class="row">
