--- a/wp.html
+++ b/wp.html
@@ -11,6 +11,23 @@
     <title>Tiinon_webTech_githpages</title>
   </head>
   <body>
+       <!--navbar begins-->
+    <div id="container">
+        <div id="label"><h1>Experimenting on website publishing services</h1>
+        </div>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Dropdown button
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="githpages.html">Github pages</a>
+                  <a class="dropdown-item" href="netlify.html">Netlify</a>
+                  <a class="dropdown-item" href="wp.html">WordPress</a>
+                </div>
+            </div>
+        </div>
+    </div>
+     <!--navbar ends-->
 
 <p>Wordpress has a great reputation as a flexible and user friendly web publishing platform.
     Customer base is huge, two out of every five websites on the internet use WordPress
